Squash Firefox (and other) bugs

--- a/app/assets/stylesheets/modules/_hero.css.scss
+++ b/app/assets/stylesheets/modules/_hero.css.scss
@@ -3,9 +3,8 @@
   margin-bottom: 30px;
   padding: 22.5% 12.5% 5.5%;
   text-align: center;
-  background: image-url("bg_hero.jpg") center center;
+  background: image-url("bg_hero.jpg") center bottom;
   background-size: cover;
-  @extend %mask-section-bottom;
 
   h1 {
     position: relative;
@@ -15,6 +14,27 @@
     line-height: 1.2;
     color: #fff;
     background: $blue;
+
+    &::before,
+    &::after {
+      content: "";
+      width: 30px;
+      height: 100%;
+      top: 0;
+      position: absolute;
+      background: inline("bg_banner_left.png") no-repeat;
+      background-size: auto 100%;
+    }
+
+    &::before {
+      left: -30px;
+      background-position: right;
+    }
+
+    &::after {
+      right: -30px;
+      background-image: inline("bg_banner_right.png");
+    }
   }
 
   .actions .button:first-child {
@@ -28,5 +48,10 @@
 
   @include max-width(500px) {
     padding: 30px 30px 10px;
+
+    h1 {
+      margin-right: 10px;
+      margin-left: 10px;
+    }
   }
 }
