--- a/app/assets/stylesheets/utilities/_placeholders.css.scss
+++ b/app/assets/stylesheets/utilities/_placeholders.css.scss
@@ -11,10 +11,3 @@
     clear: both;
   }
 }
-
-%mask-section-bottom {
-  mask: inline("mask_section_bottom.png") no-repeat;
-  mask-repeat: no-repeat;
-  mask-size: 100%;
-  mask-position: bottom center;
-}
